Этап 2. Основной сервис