@@ -5,9 +5,11 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import ru.practicum.dto.event.EventShortDto;
 import ru.practicum.mapper.CompilationMapper;
 import ru.practicum.dto.compilation.CompilationDto;
 import ru.practicum.exception.NotFoundException;
+import ru.practicum.mapper.EventMapper;
 import ru.practicum.model.Compilation;
 import ru.practicum.repository.CompilationRepository;
 
@@ -21,12 +23,6 @@ public class CompilationServiceImpl implements CompilationService {
 
     @Override
     public List<CompilationDto> getCompilations(Boolean pinned, Integer from, Integer size) {
-        if (from < 0) {
-            throw new IllegalArgumentException("Параметр 'from' не может быть отрицательным");
-        }
-        if (size <= 0) {
-            throw new IllegalArgumentException("Параметр 'size' должен быть положительным");
-        }
         Pageable pageable = PageRequest.of(from / size, size);
 
         Page<Compilation> compilations;
@@ -38,15 +34,25 @@ public class CompilationServiceImpl implements CompilationService {
 
         return compilations.getContent()
                 .stream()
-                .map(CompilationMapper::toCompilationDto)
-                .collect(Collectors.toList());
+                .map(comp -> CompilationMapper.toCompilationDto(
+                        comp,
+                        comp.getEvents().stream()
+                                .map(EventMapper::toEventShortDtoFromEvent)
+                                .toList()
+                ))
+                .toList();
     }
 
     @Override
     public CompilationDto getCompilation(Long compId) {
-        return CompilationMapper.toCompilationDto(
-                compilationRepository.findById(compId)
-                        .orElseThrow(() -> new NotFoundException(
-                                String.format("Compilation with id=%d was not found", compId))));
+        Compilation compilation = compilationRepository.findById(compId)
+                .orElseThrow(() -> new NotFoundException(
+                        String.format("Compilation with id=%d was not found", compId)));
+
+        List<EventShortDto> eventShortDtos = compilation.getEvents().stream()
+                .map(EventMapper::toEventShortDtoFromEvent)
+                .toList();
+
+        return CompilationMapper.toCompilationDto(compilation, eventShortDtos);
     }
 }
